<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sample_app_description"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/custom_app_limits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCustomClicked" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCustomClicked"
                android:text="@string/custom_description"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Separator -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="25dp"
            android:background="@android:color/white" />

        <!-- Section to show app restriction settings under a restricted profile. -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_app_limits_label"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/current_app_limits_description"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/boolean_entry_title"
                android:textSize="18sp" />

            <Space
                android:layout_width="15dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/boolean_entry_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boolean_entry_title"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/choice_entry_title"
                android:textSize="18sp" />

            <Space
                android:layout_width="15dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/choice_entry_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boolean_entry_title"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/multi_entry_title"
                android:textSize="18sp" />

            <Space
                android:layout_width="15dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/multi_entry_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multi_entry_title"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>